# embeddings-db

./: .gitignore  CMakeLists.txt
src/: AddApplication.cpp  AddApplication.h  CMakeLists.txt  HTMLFileProcessor.cpp  HTMLFileProcessor.h  HTTPModelService.cpp  HTTPModelService.h  OpenDocProcessor.cpp  OpenDocProcessor.h  PostgreSqlDb.cpp  PostgreSqlDb.h  SearchApplication.cpp  SearchApplication.h  common.cpp  common.h  embeddings-db-add.cpp  embeddings-db-search.cpp
